--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
     <div class="container">
-        <a href="/" class="navbar-brand">Shopping List</a>
+        <a href="/list" class="navbar-brand">Shopping List</a>
 {#        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
             <span class="navbar-toggle-icon"></span>
         </button>#}
