--- a/templates/list/new.html.twig
+++ b/templates/list/new.html.twig
@@ -6,4 +6,5 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     {{ form_end(form) }}
+    <a href="/list" class="btn btn-block btn-light mt-3">Cancel</a>
 {% endblock %}
